# nes-emu

./: .gitignore  Cargo.toml  Dockerfile  README.md
desktop/: Cargo.toml
desktop/src/: audio.rs  commands.rs  main.rs  nes.rs
desktop/src/dbg/: chrscreen.rs
nes/: Cargo.toml
nes-desktop/: .gitignore  Cargo.toml
nes-desktop/.cargo/: config.toml
nes-desktop/src/: dbg.rs  main.rs  nes.rs  screen.rs
nes-desktop/src/dbg/: chrscreen.rs  mod.rs  palettescreen.rs  vramscreen.rs
nes-wasm/: Cargo.toml  Trunk.toml  index.html  index.scss
nes-wasm/src/: main.rs  nes.rs
nes/src/: buscpu.rs  busppu.rs  cartridge.rs  joypad.rs  lib.rs  nesaudio.rs  nesscreen.rs
nes/src/apu/: mod.rs  pulse.rs  triangle.rs
nes/src/cpu/: addressing.rs  decode.rs  instructions.rs  mod.rs
nes/src/mappers/: cnrom.rs  gxrom.rs  mmc1.rs  mod.rs  nrom.rs  uxrom.rs
nes/src/ppu/: mod.rs  regcontrol.rs  regmask.rs  regs.rs  regscroll.rs  regstatus.rs
nes/src/tests/: cpu.rs
web/: Cargo.toml  Dockerfile  Trunk.toml  index.html  index.scss  nginx.conf
web/infra/prod/: cd.bash  docker-compose.yml
web/infra/staging/: compose.yml  docker-compose.yml
web/src/: dk.rs  main.rs
web/src/components/: cnes.rs  mod.rs
web/src/nes/: audio.rs  audio.rs.bak  mod.rs  screen.rs
