[package]
name = "nes-desktop"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["release_max_level_error"] }
minifb = "0.23.0"
nes = { path = "../nes" }
regex = "1.7.0"
rs6502 = "0.3.4"
web-audio-api = "0.26.0"

[features]
screens = []
step = []
