[package]
name = "nes-desktop"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
strip = "symbols"
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.58"
env_logger = "0.9.0"
log = { version = "0.4.17", features = ["release_max_level_error"] }
minifb = "0.23.0"
nes = { path = "../nes" }
