[package]
name = "nes-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dioxus = { version = "0.2.4", features = ["web"] }
log = { version = "0.4.17", features = ["release_max_level_off"] }
nes = { path = "../nes" }
wasm-logger = "0.2.0"
