[package]
name = "nes-web"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.58"
log = { version = "0.4.17", features = ["release_max_level_info"] }
nes = { path = "../nes" }
wasm-bindgen = "0.2.81"
wasm-logger = "0.2.0"
fluvio-wasm-timer = "0.2.5"
yew = "0.19.3"
wasm-bindgen-futures = "0.4.31"
futures = "0.3.21"
js-sys = "0.3.58"
gloo-file = "0.2.3"

[dependencies.web-sys]
version = "0.3.58"
features = ["CanvasRenderingContext2d", "Document", "Window", "Element", "HtmlCanvasElement", "ImageData", "FileReader", "OscillatorNode", "OscillatorType", "GainNode", "AudioNode", "AudioContext", "AudioDestinationNode", "AudioParam", "PeriodicWaveOptions", "PeriodicWave", "AudioContextState"]
